kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-ingestor-python
  namespace: api-sql-reports
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-ingestor-python
  template:
    metadata:
      labels:
        app: data-ingestor-python
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: data-ingestor-python
          image: luis122448/data-ingestor-python:v1.0.3
          command: ["cmd", "/opt/entrypoint.sh"]
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: database-volume
              mountPath: /opt/database
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: sqllite-pvc
        - name: openvpn-config
          secret:
            secretName: openvpn-client-config
        - name: openvpn-credentials
          secret:
            secretName: openvpn-credentials
      restartPolicy: Always
