kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: data-ingestor-python-service
  namespace: api-sql-reports
spec:
  type: ClusterIP
  selector:
    app: data-ingestor-python
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
